# watcher_object_detection

./: .gitignore
docker/: Dockerfile
ros2_jazzy_ws/rviz/: pos_tracking_config.rviz
ros2_jazzy_ws/src/arcs_positional_tracking/: README.md  package.xml  setup.cfg  setup.py
ros2_jazzy_ws/src/arcs_positional_tracking/arcs_positional_tracking/: fake_pose_pub.py  positional_tracking_node.py
ros2_jazzy_ws/src/arcs_positional_tracking/launch/: tracking.launch.py
