<?xml version="1.0"?>
<package format="3">
  <name>arcs_positional_tracking</name>
  <version>0.0.1</version>
  <description>Positional tracking subsystem for the ARCS WATCHER project.</description>

  <maintainer email="waldo.duarte.405@my.csun.edu">Waldo Duarte</maintainer>
  <license>MIT</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
  