[develop]
script_dir=$base/lib/arcs_positional_tracking
[install]
install_scripts=$base/lib/arcs_positional_tracking
[options.entry_points]
console_scripts =
    positional_tracking_node = arcs_positional_tracking.positional_tracking_node:main
    fake_pose_pub = arcs_positional_tracking.fake_pose_pub:main